apps/navidrome/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: basic-auth
  namespace: navidrome
spec:
  basicAuth:
    secret: basic-auth-secret
    removeHeader: false
